--- a/VRChat/38/1037538.html
+++ b/VRChat/38/1037538.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "z61yLxLm4f/Pzwi6v2AScYNNjkf/3l3IirOBoDcmA8M="></script>
+    "x05EITuJnCLDZAe7sptQ+8fxBGJE02p9NH9sjYsFbI0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル 日本刀｢雪透｣ ver2.0","description":"English explanation is at the bottom of this page.\n\n本製品は、fbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。\n\n「ゆきとおし」と読みます。\n付属のトレイルレンダラーは以下の動画のようになっております。\n\n---\n新日本刀モデル「細雪(ささめゆき)」も是非ご覧ください。\n\nfbxモデル 日本刀｢細雪｣ | Store*Snowlight\nhttps://snowlight0102.booth.pm/items/2251603","url":"https://booth.pm/ja/items/1037538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1037538/031a84ed-3bfa-407e-8988-b7d6709c3c2e_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="z61yLxLm4f/Pzwi6v2AScYNNjkf/3l3IirOBoDcmA8M="></script>
+    nonce="x05EITuJnCLDZAe7sptQ+8fxBGJE02p9NH9sjYsFbI0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -192,7 +192,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               fbxモデル 日本刀｢雪透｣ ver2.0
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -208,7 +208,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1132
+                                      1134
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -224,10 +224,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1132
+                                      1134
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -348,9 +350,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -870,7 +869,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
